update target repository

--- a/opensift/bc-2-git-source-dockerhub.yaml
+++ b/opensift/bc-2-git-source-dockerhub.yaml
@@ -20,7 +20,7 @@ spec:
   output:
     to:
       kind: DockerImage
-      name: "shiftyou/build2-app:last"
+      name: "jonggyoukim/build2-app:last"
     pushSecret:
       name: dockerhub
 
