--- a/tekton/tekton-app-deployment.yaml
+++ b/tekton/tekton-app-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: tekton-app
-        image: shiftyou/tekton-app
+        image: jonggyoukim/tekton-app
         env:
         - name: MYSQL_SERVICE_HOST
           value: demo-mysql
