--- a/yaml/deployment.yaml
+++ b/yaml/deployment.yaml
@@ -16,23 +16,10 @@ spec:
     spec:
       containers:
       - name: demo-app
-        image: shiftyou/demo-app
+        image: jonggyoukim/member-app
         env:
         - name: MYSQL_SERVICE_HOST
           value: demo-mysql
         ports:
         - containerPort: 8080
           name: demo-app
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: demo-app
-  labels:
-    app: demo-app
-spec:
-  ports:
-  - port: 8080
-    targetPort: 8080
-  selector:
-    app: demo-app
