--- a/openshift/dc1-bc1-deploy.yaml
+++ b/openshift/dc1-bc1-deploy.yaml
@@ -1,21 +1,21 @@
 apiVersion: v1
 kind: DeploymentConfig
 metadata:
-  name: dc-app
+  name: dc1
 spec:
   replicas: 1
   selector:
-    name: dc-app
+    name: dc1
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        name: dc-app
+        name: dc1
     spec:
       containers:
-      - image: build1-app:latest
-        name: build1-app
+      - image: bc1-app:latest
+        name: bc1-app
         ports:
         - containerPort: 8080
           protocol: TCP
@@ -28,8 +28,8 @@ spec:
   - imageChangeParams:
       automatic: true
       containerNames:
-      - build1-app
+      - bc1-app
       from:
         kind: ImageStreamTag
-        name: build1-app:latest
+        name: bc1-app:latest
     type: ImageChange
